--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
            <div class=" actuality-image">
                <div class="bloc-image">
-                    <img src="image/toucan.png" alt="" >
+                    <img src="image/a017c53287c2ec37b27926f2590bdff1.jpeg" alt="" >
                     <div class="overlay-image">
                         <div class="textes">
                             <a href="#" class="cinema">EMISSION</a>
@@ -96,7 +96,7 @@
                </div>
 
                 <div class="bloc-image">
-                    <img src="image/0aba273ec8cde1a54e8decba4e4e2da6.jpg" alt="">
+                    <img src="image/0aba273ec8cde1a54e8decba4e4e2da6.jpg" alt="" >
                     <div class="overlay-image">
                         <div class="textes">
                             <a href="#" class="image-afrique">AFRIQUE</a>
